--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Swipe Cards</string>
     <string name="progress_text">%s complete.</string>
+
+    <string name="error_text">Error in fetching data</string>
 </resources>
